--- a/style.css
+++ b/style.css
@@ -1,23 +1,29 @@
 body{
-    background-color: #393E46;
+    background-color: #1F1D36;
 }
 
 h1{
     margin: 30px;
-    font-family: 'Lobster', cursive;
-    text-shadow: 5px 0 #232931;
-    font-size: 8rem;
-    color: #4ECCA3;
+    font-family: 'Lobster Two', cursive;
+    text-shadow: 5px 0 #3F3351;
+    font-size: 7rem;
+    color: #E9A6A6;
 }
+
 
 p{
     font-size: 2rem;
-    color: #4ECCA3;
-    font-family: 'Indie Flower', cursive;
+    color: #E9A6A6;
+    font-family: 'Montserrat', sans-serif;
 }
 
 img{
     width: 80%;
+}
+
+a{
+    color: #EEEEEE;
+    text-decoration: none;
 }
 
 footer{
@@ -26,11 +32,38 @@ footer{
     text-align: center;
 }
 
+.btn{
+    background-color: #1F1D36;
+    color: #EEEEEE;
+    font-size: 5rem;
+    font-family: 'Montserrat', sans-serif;
+    border: 2px solid black;
+    transition-duration: 0.4s;
+    padding: 10px 24px;
+}
+
+
+.btn:hover {
+    background-color: #864879;
+    color: white;
+}
+
+.volver{
+    position: absolute;
+    right: 30px;
+    top: 50px;
+    font-size: 3rem;
+}
+
+.index{
+    margin-bottom: 5%;
+}
+
 .container{
     width: 70%;
     margin: auto;
     text-align: center;
-    font-family: 'Indie Flower', cursive;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .dado{
@@ -38,5 +71,12 @@ footer{
     display: inline-block;
 }
 
+.dice{
+    text-align: center;
+    display: inline-block;
+}
 
+#welcome{
+    font-size: 4rem;
+}
 
